--- a/layout/index.html
+++ b/layout/index.html
@@ -107,7 +107,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <ul class="sidebar-menu">
           <li class="header">HEADER</li>
           <!-- Optionally, you can add icons to the links -->
-          <li class="active"><a href="#"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+          <li class="active"><a href="index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
           <li class="treeview">
             <a href="#">
               <i class="fa fa-mortar-board"></i> <span>Salas</span>
