Adiciona campo para pesquisar por data e horário utilizado datetimepicker

--- a/layout/pages/lista_salas.html
+++ b/layout/pages/lista_salas.html
@@ -117,6 +117,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <h4>Salas</h4>
                 </div>
                 <div class="panel-body">
+                    <form method="POST" action="">
+                    	<div class="box-tools">
+                    	  <div class="input-group input-group-sm" style="width: 250px; margin: 0 auto;">
+                    		<div class='input-group input-group-sm'>
+                    		  <input type='text' class="form-control" id='datetimepicker1' placeholder="Buscar por data..."/>
+                    		  <span class="input-group-btn">
+                    			  <button class="btn btn-primary btn-flat" type="submit">Pesquisar</button>
+                    		  </span>
+                    		</div>
+                    	  </div>
+                    	</div><br>
+                    </form>
                   <div class="box-body table-responsive no-padding">
                     <table class="table table-bordered table-hover">
                       <tr>
