Cadastro de usuário

--- a/layout/index.html
+++ b/layout/index.html
@@ -30,7 +30,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <header class="main-header">
 
       <!-- Logo -->
-      <a href="index2.html" class="logo">
+      <a href="index.html" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>UFBA</b></span>
         <!-- logo for regular state and mobile devices -->
@@ -119,6 +119,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <li><a href="pages/lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
             </ul>
           </li>
+          <li class="treeview active">
+          <a href="#">
+            <i class="fa fa-user"></i> <span>Usuário</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="index2.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a></li>
+          </ul>
+        </li>
+      </ul>
         </ul>
         <!-- /.sidebar-menu -->
       </section>
