--- a/layout/pages/lista_salas.html
+++ b/layout/pages/lista_salas.html
@@ -96,6 +96,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <li class="active"><a href="lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
           </ul>
         </li>
+        <li class="treeview active">
+          <a href="#">
+            <i class="fa fa-user"></i> <span>Usuário</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="../index2.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a></li>
+          </ul>
+        </li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -188,7 +199,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="modal-body" style="padding: 0px;">
         <form>
           <div class="form-group">
-                                    
+
                   <div class="col-md-12">
                     <label>Equipamentos</label>
                     <select class="form-control">
@@ -199,7 +210,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                       <option>Equipamento 5</option>
                     </select>
                   </div>
-                  
+
                   <div class="bootstrap-timepicker col-md-12">
                     <label>Horário de Entrada:</label>
 
@@ -217,7 +228,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                     <strong>Horário Já Reservado.</strong>
                   </div>
-                  
+
                   <div class="bootstrap-timepicker col-md-12">
                     <label>Horário de Saída:</label>
 
@@ -230,7 +241,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </div>
                     <!-- /.input group -->
                   </div>
-                  
+
 
 
                 </div>
