--- a/layout/pages/lista_salas.html
+++ b/layout/pages/lista_salas.html
@@ -151,6 +151,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <th>Número</th>
                         <th>Local</th>
                         <th>Tipo</th>
+                        <th>Cadeiras</th>
                         <th>Status</th>
                         <th>Reserva</th>
                       </tr>
@@ -158,6 +159,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>133</td>
                         <td>IM</td>
                         <td>Laboratório</td>
+                        <td>40</td>
                         <td><span class="label label-success">Disponível</span></td>
                         <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Solicitar</button></td>
                       </tr>
@@ -165,6 +167,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>28</td>
                         <td>PAF III</td>
                         <td>Sala de aula</td>
+                        <td>60</td>
                         <td><span class="label label-danger">Reservada</span></td>
                         <td><button type="button" class="btn btn-danger">Sala Reservada</button></td>
                       </tr>
@@ -172,6 +175,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>133</td>
                         <td>IM</td>
                         <td>Laboratório</td>
+                        <td>30</td>
                         <td><span class="label label-success">Disponível</span></td>
                         <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Solicitar</button></td>
                       </tr>
@@ -179,11 +183,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>259</td>
                         <td>PAF 1</td>
                         <td>Sala de aula</td>
+                        <td>50</td>
                         <td><span class="label label-success">Disponível</span></td>
                         <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Solicitar</button></td>
                       </tr>
-                    </table>
-                  </div>
+                    </table>                  
+		  </div>
                 </div>
               <!-- /.box-body -->
             </div>
