Mudando arquivos de pasta para melhor organização, inserindo topo de menu de logout em todas as páginas, colocando rota da pagina de login em todos os arquivos, adicionando arquivo css solto na pasta propria para css, corrige rotas

--- a/layout/index.html
+++ b/layout/index.html
@@ -63,7 +63,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Logout</a>
+                  <a href="pages/login.html" class="btn btn-default btn-flat">Logout</a>
                 </div>
               </li>
             </ul>
@@ -119,7 +119,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <li><a href="pages/lista_salas.html"><i class="fa fa-circle-o"></i> Buscar salas</a></li>
             </ul>
           </li>
-          <li class="treeview active">
+          <li class="treeview">
           <a href="#">
             <i class="fa fa-user"></i> <span>Usuário</span>
             <span class="pull-right-container">
@@ -127,7 +127,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="index2.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a></li>
+            <li><a href="pages/cadastrar_usuario.html"><i class="fa fa-pencil-square-o"></i> Cadastro</a></li>
           </ul>
         </li>
       </ul>
