--- a/mobile/ChavesIME/app/src/main/res/layout/activity_home.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/activity_home.xml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/menuDrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.ufba.chavesime.HomeActivity">
+    android:fitsSystemWindows="true">
 
-    <TextView
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home Activity"
-        android:textSize="40sp"
-        android:layout_centerInParent="true"
-        android:gravity="center"/>
+        tools:context="br.ufba.chavesime.HomeActivity">
 
-</RelativeLayout>
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@color/white"
+            android:id="@+id/homeToolbar">
+        </android.support.v7.widget.Toolbar>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Home Activity"
+            android:textSize="40sp"
+            android:layout_centerInParent="true"
+            android:gravity="center"/>
+
+    </RelativeLayout>
+
+    <include
+        layout="@layout/layout_menu">
+    </include>
+
+</android.support.v4.widget.DrawerLayout>
