--- a/mobile/ChavesIME/app/src/main/res/values/colors.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#29215E</color>
+    <color name="colorPrimaryDark">#29213E</color>
     <color name="colorAccent">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
