--- a/layout/pages/lista_salas.html
+++ b/layout/pages/lista_salas.html
@@ -181,7 +181,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <th>Reserva</th>
                       </tr>
                       <tr>
-                        <td>133</td>
+                        <td><a href="relatorio_salas.html">133</a></td>
                         <td>IM</td>
                         <td>Laboratório</td>
                         <td>40</td>
@@ -189,7 +189,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Solicitar</button></td>
                       </tr>
                       <tr>
-                        <td>28</td>
+                        <td><a href="relatorio_salas.html">28</a></td>
                         <td>PAF III</td>
                         <td>Sala de aula</td>
                         <td>60</td>
@@ -197,7 +197,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td><button type="button" class="btn btn-danger">Sala Reservada</button></td>
                       </tr>
                       <tr>
-                        <td>133</td>
+                        <td><a href="relatorio_salas.html">133</a></td>
                         <td>IM</td>
                         <td>Laboratório</td>
                         <td>30</td>
@@ -205,7 +205,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Solicitar</button></td>
                       </tr>
                       <tr>
-                        <td>259</td>
+                        <td><a href="relatorio_salas.html">259</a></td>
                         <td>PAF 1</td>
                         <td>Sala de aula</td>
                         <td>50</td>
